syntax = "proto3";
package journal.record;

message JournalRecord{
    string key = 1;
    bytes content = 2;
    uint64 create_time = 3;
    string tag = 4;
    uint64 offset = 5;
    string namespace = 6;
    string shard_name = 7;
    uint32 segment = 8;
}